[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/DrinksGuide.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]

[node name="DrinksGuide" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -190.0
margin_right = 200.0
margin_bottom = 190.0
mouse_filter = 2
color = Color( 0.129412, 0.121569, 0.121569, 0.972549 )

[node name="DrinksGuideTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 120.0
margin_right = 150.0
margin_bottom = 170.0
text = "PEDIDO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IngredientsBox" type="VBoxContainer" parent="."]
margin_left = 580.0
margin_top = 250.0
margin_right = 741.0
margin_bottom = 400.0
mouse_filter = 2
alignment = 1

[node name="Ingredients" type="Label" parent="IngredientsBox"]
margin_right = 161.0
margin_bottom = 150.0
text = "n, nome do ingrediente x
n, nome do ingrediente x
n, nome do ingrediente x
n, nome do ingrediente x
n, nome do ingrediente x
n, nome do ingrediente x
n, nome do ingrediente x
n, nome do ingrediente x
n, nome do ingrediente x"

[node name="DrinksName" type="Label" parent="."]
margin_left = 348.0
margin_top = 210.0
margin_right = 453.0
margin_bottom = 224.0
text = "Nome da bebida"

[node name="DrinksImage" type="TextureRect" parent="."]
margin_left = 350.0
margin_top = 240.0
margin_right = 500.0
margin_bottom = 420.0
mouse_filter = 2
texture = SubResource( 1 )
expand = true

[node name="GoToDrinks" type="Button" parent="."]
modulate = Color( 0.188235, 1, 0.0470588, 1 )
margin_left = 385.0
margin_top = 440.0
margin_right = 469.0
margin_bottom = 470.0
text = "Fazer Drink"

[node name="Close" type="Button" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 670.0
margin_top = 130.0
margin_right = 690.0
margin_bottom = 150.0
text = "X"

[connection signal="pressed" from="GoToDrinks" to="." method="_on_GoToDrinks_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
